@@ -278,4 +278,7 @@ Contributions
   Roberto Togni <rtogni@bresciaonline.it>
     RPZA video decoder
 
+  Mario Brito <mbrito@student.dei.uc.pt>
+    Wing Commander III video decoder
+
     (let us know if we've forgotten anyone)
